# discord-spam-reporter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  parse_channel_id.rs  parse_guild_id.rs  parse_regexp.rs  parse_role_id.rs
