[package]
name = "discord-spam-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0" , features = ["derive"] }
serde_yaml = "0.8"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.14", features = [ "macros", "rt-multi-thread"] }
once_cell = "1.8"
